--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -1,4 +1,4 @@
-<!DOCTYE html>
+<!DOCTYPE html>
     <html lang="en">
 
     <head>
@@ -150,4 +150,4 @@
         </div>
     </body>
 
-    </html>
+</html>
