--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -5,120 +5,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Xacademy Clase 1 maquetacion</title>
-        <style>
-            body {
-                margin: 0;
-            }
+        <title>Xacademy - Paz</title>
+        
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
-            p {
-                margin-right: 40px;
-                font-size: 0.8em;
-                color: black;
-                font-family: Inter, Arial, Helvetica, sans-serif
-            }
-
-            p:hover {
-                margin-right: 40px;
-                font-size: 0.8em;
-                color: blue;
-                font-family: Inter, Arial, Helvetica, sans-serif
-            }
-
-
-            h1 {
-                margin: 0px 300px;
-                text-align: center;
-                display: block;
-                font-size: 1.8em;
-                margin-block-start: 0.83em;
-                margin-block-end: 0.83em;
-                margin-inline-start: 320px;
-                margin-inline-end: 320px;
-                font-weight: bold;
-
-            }
-
-            button.redondo {
-                background-color: white;
-                border: 2px solid black;
-                border-radius: 35px;
-                padding: 0px 18px;
-                height: 39px;
-                margin: 0px 2px;
-
-            }
-
-            button.redondo:hover {
-                background-color: black;
-                border: 2px solid white;
-                border-radius: 35px;
-                padding: 0px 18px;
-                height: 39px;
-                margin: 0px 2px;
-                color: aliceblue;
-            }
-
-
-            button.redondo2 {
-                background-color: white;
-                border: 2px solid blue;
-                border-radius: 35px;
-                padding: 0px 18px;
-                height: 39px;
-                margin: 0px 2px;
-                color: blue;
-
-            }
-
-            button.redondo2:hover {
-                background-color: blue;
-                border: 2px solid white;
-                border-radius: 35px;
-                padding: 0px 18px;
-                height: 39px;
-                margin: 0px 2px;
-                color: white;
-
-            }
-
-
-            div#introduction-actions {
-                display: flex;
-                justify-content: center;
-
-            }
-
-            div#introduction-text {
-                font-family: Inter, Arial, Helvetica, sans-serif;
-
-            }
-
-            div#header {
-
-                height: 80px;
-                width: 1200px;
-
-            }
-
-            div#header-right {
-                font: size 11px;
-                color: black;
-                font-family: Inter, Arial, Helvetica, sans-serif;
-
-            }
-
-            div#header-right:hover {
-                font: size 11px;
-                color: blue;
-                font-family: Inter, Arial, Helvetica, sans-serif;
-
-            }
-
-            img#logo1 {
-                padding: 15%;
-            }
-        </style>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -129,7 +23,7 @@
             <div id="header-left">
                 <img src="logo.svg" id=logo1>
             </div>
-            <div id="header-right" style="display: flex; align-items: center;">
+            <div id="header-right" style="display: flex; align-items: center;padding: 0px 100px">
                 <p>Nosotros</a></p>
                 <p>Programas</p>
                 <p>Capacitaciones</p>
